Update URLs, PR template, etc

--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -18,7 +18,7 @@
         {% endif %}
 
         <dd>
-          <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
+          <a href="/{{ article.url }}">{{ article.title }}</a>
         </dd>
       {% endfor %}
     </dl>
