--- a/theme/templates/search.html
+++ b/theme/templates/search.html
@@ -7,7 +7,7 @@
         $('#tipue_search_input').tipuesearch({
             'show': 10,
             'mode': 'json',
-            'contentLocation': '{{ SITEURL }}/tipuesearch_content.js'
+            'contentLocation': '/tipuesearch_content.js'
         });
     });
 </script>
