--- a/theme/templates/authors.html
+++ b/theme/templates/authors.html
@@ -10,7 +10,7 @@
   <div>
     <ul class="list">
       {% for author, articles in authors|sort %}
-      <li><a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a> ({{ articles|count }})</li>
+      <li><a href="/{{ author.url }}">{{ author }}</a> ({{ articles|count }})</li>
       {% endfor %}
     </ul>
   </div>
