--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -11,7 +11,7 @@
     <ul class="list">
       {% for category, articles in categories|sort %}
       <li>
-        <a href="{{ SITEURL }}/{{ category.url }}">{{ category }}</a> ({{ articles|count }})
+        <a href="/{{ category.url }}">{{ category }}</a> ({{ articles|count }})
       </li>
       {% endfor %}
     </ul>
