--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -15,16 +15,16 @@
 {% for article in articles_page.object_list %}
 <article>
   <header>
-    <h2><a href="{{ SITEURL }}/{{ article.url }}{% if not DISABLE_URL_HASH %}#{{ article.slug }}{% endif %}">{{ article.title }}</a></h2>
+    <h2><a href="/{{ article.url }}{% if not DISABLE_URL_HASH %}#{{ article.slug }}{% endif %}">{{ article.title }}</a></h2>
     <p>
       {{ _('Posted on %(when)s in %(category)s',
            when=article.locale_date,
-           category='<a href="%s/%s">%s</a>'|format(SITEURL, article.category.url, article.category)|safe) }}
+           category='<a href="/%s">%s</a>'|format(article.category.url, article.category)|safe) }}
 
       {% if article.tags and not HOME_HIDE_TAGS %}
           &#8226; {{ _('Tagged with') }}
           {% for tag in article.tags %}
-              <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% if not loop.last %},{% endif %}
+              <a href="/{{ tag.url }}">{{ tag }}</a>{% if not loop.last %},{% endif %}
           {% endfor %}
       {% endif %}
 
@@ -42,7 +42,7 @@
       {% if article.content != article.summary %}
         <br>
         <a class="btn"
-           href="{{ SITEURL }}/{{ article.url }}{% if not DISABLE_URL_HASH %}#{{ article.slug }}{% endif %}">
+           href="/{{ article.url }}{% if not DISABLE_URL_HASH %}#{{ article.slug }}{% endif %}">
           {{ _('Continue reading') }}
         </a>
       {% endif %}
