Push Twitter enablement

--- a/theme/static/stylesheet/style.less
+++ b/theme/static/stylesheet/style.less
@@ -155,6 +155,12 @@ main {
     }
   }
 
+  @media screen and (max-width:900px){
+    .nomobile {
+      display:none;
+    }
+  }
+
   article {
     margin: 0 8% 2% 8%;
 
@@ -533,6 +539,7 @@ ul.social {
 @media screen and (min-width: 768px) {
   aside {
     width: 25vw;
+    max-width: 350px;
     height: 100vh;
     position: fixed;
     top: 0;
