--- a/theme/static/stylesheet/style.less
+++ b/theme/static/stylesheet/style.less
@@ -742,3 +742,43 @@ div.figure.align-center {
 div.figure.align-right {
   text-align: right;
 }
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table thead tr {
+    background-color: #777777;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: thin solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #777777;
+}
+
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+}
+
+.tooltip-inner {
+    min-width: 450px; /* the minimum width */
+}
