Add privacy policy and financial support

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -443,6 +443,8 @@
           </li>
         {% endfor %}
       </ul>
+      <br>
+      <a href="/content/pages/privacy-policy.html">Privacy Policy</a> | <a href="/content/pages/financial-support.html">Financial Support</a>
     </div>
 
     {% if GOOGLE_ADSENSE and GOOGLE_ADSENSE.ads.aside %}
