Make links to privacy & support smaller

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -444,7 +444,7 @@
         {% endfor %}
       </ul>
       <br>
-      <a href="/content/pages/privacy-policy.html">Privacy Policy</a> | <a href="/content/pages/financial-support.html">Financial Support</a>
+      <small><a href="/content/pages/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="/content/pages/financial-support.html">Financial Support</a></small>
     </div>
 
     {% if GOOGLE_ADSENSE and GOOGLE_ADSENSE.ads.aside %}
