Don't replace plus with space

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -53,8 +53,7 @@
       location.search.substr(1).split("&").forEach(function (pair) {
           if (pair === "") return;
           var parts = pair.split("=");
-          location.queryString[parts[0]] = parts[1] &&
-              decodeURIComponent(parts[1].replace(/\+/g, " "));
+          location.queryString[parts[0]] = parts[1];
       });
 
       // Numeric only control handler
